<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/RegisterPageLogo"
            android:layout_width="@dimen/_180"
            android:layout_height="@dimen/_120"
            android:layout_gravity="top|center"
            android:layout_marginBottom="@dimen/_10"
            android:layout_marginTop="@dimen/_20"
            android:src="@drawable/icon4"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="LogIn"
            android:text="@string/fill_txt"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_40"
            android:layout_marginRight="@dimen/_40"
            android:layout_marginTop="@dimen/_10"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:singleLine="true"
                android:hint="@string/first_name"
                android:maxLines="1"
                android:textColorHint="@color/hintHighLightText"
                android:paddingLeft="@dimen/_20" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:singleLine="true"
                android:hint="@string/last_name"
                android:maxLines="1"
                android:textColorHint="@color/hintHighLightText"
                android:paddingLeft="@dimen/_20" />

            <EditText
                android:id="@+id/edtPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:singleLine="true"
                android:hint="@string/phno"
                android:inputType="number"
                android:maxLines="1"
                android:textColorHint="@color/hintHighLightText"
                android:paddingLeft="@dimen/_20" />

            <EditText
                android:id="@+id/edtCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:singleLine="true"
                android:hint="@string/address"
                android:maxLines="1"
                android:textColorHint="@color/hintHighLightText"
                android:paddingLeft="@dimen/_20" />

            <EditText
                android:id="@+id/edtCPR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10"
                 android:background="@drawable/boder_black"
                android:ellipsize="end"
                android:singleLine="true"
                android:hint="@string/cpr_no"
                android:inputType="number"
                android:maxLines="1"
                android:textColorHint="@color/hintHighLightText"
                android:paddingLeft="@dimen/_20" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rectangle_button"
                android:onClick="btnRegister"
                android:text="@string/btn_register"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20"
                android:layout_marginTop="@dimen/_10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_acnt" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="LogIn"
                    android:text="@string/Login"
                    android:textColor="@color/highLightText" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>