<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20"
        android:layout_marginLeft="@dimen/_20"
        android:text="@string/drivers_license"
        android:textSize="@dimen/_18"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_60"
        android:layout_marginLeft="@dimen/_20"
        android:text="@string/image_upload_txt" />

    <Button
        android:id="@+id/tkPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20"
        android:layout_marginRight="@dimen/_20"
        android:layout_marginTop="@dimen/_100"
        android:textAlignment="textStart"
        android:paddingLeft="@dimen/_20"
        android:textColor="#FFF"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:onClick="tkPhoto"
        android:background="@drawable/oval_shape_btn_2"
        android:text="@string/tk_photo" />


</FrameLayout>