<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drivers_doc"
        android:textSize="@dimen/_18"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/docImg"
        android:layout_marginTop="@dimen/_20"
        android:layout_width="@dimen/_150"
        android:layout_height="@dimen/_150"
        android:layout_gravity="center"
        android:src="@drawable/ic_insert_drive_file"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20"
        android:text="@string/image_upload_doc_txt" />

    <Button
        android:id="@+id/tkPhoto"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40"
        android:layout_gravity="center"
        android:textAlignment="textStart"
        android:layout_marginTop="@dimen/_20"
        android:paddingLeft="@dimen/_40"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_action_camera"
        android:onClick="choosePhoto"
        android:background="@drawable/rectangle_button"
        android:text="@string/tk_photo"
        android:textAllCaps="false"/>


</LinearLayout>