<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/SignInPageLogo"
        android:layout_width="@dimen/_150"
        android:layout_height="@dimen/_150"
        android:layout_gravity="top|center"
        android:layout_marginTop="@dimen/_40"
        android:src="@drawable/icon4"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_40"
        android:layout_marginRight="@dimen/_40"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtEmailPhno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/_40"
            android:hint="@string/email_number"
            android:textColorHint="@color/hintHighLightText"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:layout_marginBottom="@dimen/_10"
            android:background="@drawable/boder_black"/>

        <EditText
            android:id="@+id/edtPswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10"
            android:ellipsize="end"
            android:hint="@string/paswd"
            android:textColorHint="@color/hintHighLightText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="@dimen/_40"
            android:singleLine="true"
            android:background="@drawable/boder_black"/>

        <Button
            android:id="@+id/btnSubmit"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:background="@drawable/rectangle_button"
            android:textAllCaps="false"
            android:onClick="btnSubmit"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_04"
            android:layout_marginTop="@dimen/_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_create"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/highLightText"
                android:text="@string/SignUp"
                android:onClick="SignUp"/>


        </LinearLayout>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/_70" />


</FrameLayout>